src/Pages/Character/Character.module.css
.characterPage{
    box-sizing: border-box;
    height: 100vh;
    display: flex;
    flex-direction: column;
}

.characterGrid{   
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    flex:1;
    background-color: black;
    padding: 2vh;
    padding-left: 15vw;
    padding-right: 15vw;
}

.characterGrid::-webkit-scrollbar{
    width: 0px;
    background: transparent;
}

.characterGrid .character{
    width: 120px;
    height: 120px;
    margin: 2px;
    flex-shrink: 0;
    background-position: center;
    padding: 6px;
    background: linear-gradient(36deg, rgba(233,202,55,1) 0%, rgba(251,240,184,1) 60%);
}

.character img{
    width: 100%;
    height: auto;
    pointer-events: all;
}

.character img:hover{
    transform: scale(110%);
}

.bottom{
    display: flex;
}

.characterProfile{
    background-image: linear-gradient(to left, #28313B 0%, #485461 60%);
    width: 50vw;
    min-height: 41vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.characterProfile .selectedCharacter{
    width: 150px;
    height: 150px;
    background-position: center;
}

.characterBox{
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-image: linear-gradient(to right, #28313B 0%, #485461 60%);
    border: solid black;
    border-width: 7px;
    width: 95%;
    height: 85%;
    color: silver;
    -webkit-text-stroke: 0.75px black;
}


.selectedCharacter img{
    width: 100%;
    height: auto;  
}

.characterProfile h2{
    text-align: center;
}

.statsProfile{
    background-image: linear-gradient(to right, #28313B 0%, #485461 60%);
    width: 50vw;
    min-height: 41vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.statsBox{
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 3%;
    background-image: linear-gradient(to left, #28313B 0%, #485461 60%);
    border: solid black;
    border-width: 7px;
    width: 95%;
    height: 85%;
    color: silver;
    -webkit-text-stroke: 0.75px black;
}

.statsContainer{
    margin: 10px;
    display: flex;
    align-items: center;
}

.stat{
    width: 25px;
    height: 25px;
    background-color: goldenrod;
    margin: 5px;
    border-radius: 25px;
}

